# loki

./: .gitignore  Dockerfile  README.md  docker_build.sh  docker_run.sh  docker_stop.sh  pull.sh  setup.sh
docker_data/: docker_config.sh  init.vim  zshrc
experiments/: README.md
experiments/dead_code_elimination/: README.md  eval_dead_code_elimination.py  eval_executed_handler.py  experiment_dce.py
experiments/experiment_01_correctness/: .gitignore  Cargo.toml  README.md  build_ground_truth.py  checker.py
experiments/experiment_01_correctness/correctness-checker-runtime/: Cargo.toml
experiments/experiment_01_correctness/correctness-checker-runtime/src/: lib.rs
experiments/experiment_01_correctness/correctness-oracle/: Cargo.toml
experiments/experiment_01_correctness/correctness-oracle/src/: lib.rs
experiments/experiment_01_correctness/input-generator/: Cargo.toml
experiments/experiment_01_correctness/input-generator/src/: main.rs
experiments/experiment_02_coverage/: README.md  binja_script.py
experiments/experiment_02_coverage/tracer/: .gitignore  README.md  bytecode_tracer.py  compile_commands.json  fn_tracer.cpp  install_pin.sh  makefile  makefile.rules  mgr.py  patch.py  subset_mgr.py
experiments/experiment_03_overhead/: README.md  experiment_03.py  runtime_overhead.py  size_overhead.py
experiments/experiment_04_key_encodings/: README.md  experiment_04.py  solve.py
experiments/experiment_05_key_encodings_binary/: README.md  eval_smt.py  experiment_05.py
experiments/experiment_06_taint_analysis/: README.md  eval_taint_analysis.py  experiment_06.py
experiments/experiment_07_backward_slicing/: README.md  eval_backward_slicing.py  experiment_07.py
experiments/experiment_08_symbolic_execution/: README.md  eval_symbolic_execution.py  experiment_08.py
experiments/experiment_09_mba_diversity/: README.md  eval_mba_diversity.py  experiment_09.py
experiments/experiment_10_mba_formula/: README.md  eval_mba_formula_results.py  experiment_10.py  generate_mba_formulas.py  plot_mba_formula.py  sample_mba_formulas.py
experiments/experiment_10_mba_formula/data/: add_depth1.txt  add_depth10.txt  add_depth11.txt  add_depth12.txt  add_depth13.txt  add_depth14.txt  add_depth15.txt  (+123 more)
experiments/experiment_11_core_semantics_complexity/: README.md  eval_complexity.py  experiment_11.py  plot_complexity.py
experiments/experiment_12_program_synthesis_limits/: README.md  eval_synthesis_limits.py  experiment_12.py  plot_synthesis_limits.py
experiments/experiment_13_superoperators/: README.md  eval_synthesis.py  experiment_13.py
loki/: AUTHORS  README.md  build.sh  install_z3.sh  obfuscate.py
loki/obfuscator/: .gitignore  Cargo.toml  README.md  core_semantics_complexity.patch  mba_formula_generation.patch  syntactic_simplification_binaries.patch  syntactic_simplification_binaries_depth_5.patch
loki/obfuscator/equivalence_classes/: Cargo.toml
loki/obfuscator/equivalence_classes/src/: lib.rs  main.rs  prove.rs  se_utils.rs  semantics_map.rs  state.rs  synthesizer.rs
loki/obfuscator/intermediate_language/: Cargo.toml
loki/obfuscator/intermediate_language/src/: lib.rs
loki/obfuscator/intermediate_language/src/il/: assignment.rs  expr_replacer.rs  expression_evaluator.rs  expression_utils.rs  linearized_expressions.rs  mod.rs  ops.rs  semantic_formula.rs  ssa.rs  z3.rs
loki/obfuscator/intermediate_language/src/symbolic_execution/: mod.rs  se_helper.rs  semantic_formula_evaluator.rs  symbolic_evaluator.rs  symbolic_simplifications.rs  symbolic_state.rs
loki/obfuscator/intermediate_language/src/utils/: bit_vecs.rs  mod.rs
loki/obfuscator/vm_alu/: Cargo.toml
loki/obfuscator/vm_alu/src/: config.rs  lib.rs  main.rs  synthesize.rs
loki/obfuscator/vm_alu/src/alu/: alu.rs  meta_alu.rs  mod.rs  postprocessor.rs  scheduler.rs  semantics_builder.rs  superoptimizer.rs  translator.rs
loki/obfuscator/vm_alu/src/bytecode/: keys.rs  mod.rs  translator.rs
loki/obfuscator/vm_alu/src/emulator/: emulator.rs  mod.rs  preprocessor.rs
loki/obfuscator/vm_alu/src/eval_tools/: smt.rs  verify_alu.rs
loki/obfuscator/vm_alu/src/llvm/: llvm_input_data.rs  mod.rs  postprocessor.rs
loki/obfuscator/vm_alu/src/smt/: mod.rs  thwart.rs
loki/obfuscator/vm_alu/src/synthesis/: mba.rs  mod.rs
loki/obfuscator/vm_alu/src/term_rewriting/: mod.rs  term_rewriter.rs
loki/obfuscator/z3-rs/: Cargo.toml  changes.patch
loki/obfuscator/z3-rs/src/: ast.rs  context.rs  lib.rs  optimize.rs  solver.rs  sort.rs  symbol.rs
loki/obfuscator/z3-rs/tests/: lib.rs  semver_tests.rs
loki/testcases/: README.md  se_analysis.cpp  smt_analysis.cpp
loki/testcases/libdvdcss/libdvdcss/: .gitignore  .gitlab-ci.yml  AUTHORS  INSTALL  Makefile.am  NEWS  README.md  configure.ac  install-modified-libdvdcss.sh  libdvdcss.spec.in  loki_libdvdcss.patch  patch_DecryptKey.diff  template.hpp
loki/testcases/libdvdcss/libdvdcss/doc/: doxygen.cfg.in
loki/testcases/libdvdcss/libdvdcss/m4/: attributes.m4
loki/testcases/libdvdcss/libdvdcss/msvc/: config.h  csstest.dsp  libdvdcss.dsp  libdvdcss.vcxproj  workspace.dsw
loki/testcases/libdvdcss/libdvdcss/src/: css.c  device.c  device.h  libdvdcss.c
loki/testcases/libdvdcss/libdvdcss/src/dvdcss/: version.h
loki/testcases/libdvdcss/libdvdcss/test/: csstest.c  dvd_region.c
loki/translator/: .gitignore  CMakeLists.txt  build.sh
loki/translator/src/: generate_vm.cpp  input_program.cpp  lift_input.cpp  template.cpp
lokiattack/: .gitignore  README.md  extract_handler_addresses.py  extract_handlers.py  install_triton.sh  plugin_backward_slicing.py  plugin_compiler_optimizations.py  plugin_mba_dumper.py  plugin_smt.py  plugin_symbolic_execution.py  plugin_symbolic_execution_depth_5.py  plugin_synthesis.py  plugin_taint_miasm.py  plugin_taint_triton.py  requirements.txt  run.py  synthesis_limits.py
lokiattack/lokiattack/: AUTHORS  README.md  backward_slicing.py  c_opt.py  custom_architectures.py  custom_se_engines.py  helper.py  se.py  smt_based_analysis.py  synthesis.py  taint_analysis_miasm.py  taint_analysis_triton.py
lokiattack/syntia/: AUTHORS
(+64 files in other folders)
