[package]
name = "input-generator"
authors = ["Moritz Schloegel <moritz.schloegel@rub.de>", "Tim Blazytko <tim.blazytko@rub.de>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "~0"
serde = { version = "~1", features = [ "derive" ] }
serde_json = "~1"
itertools = "~0"
